# ionic

./: CMakeLists.txt  issues.md  readme.md
include/ionic/: dye.h  ionic.h
src/: ionic.cpp
test/: test.cpp
